# stack_bad

./: .gitignore  Cargo.toml  README.md
examples/: stack_bad.sb
src/: ast.rs  cli.rs  codegen.rs  error.rs  lexer.rs  main.rs  parser.rs  token.rs
