[package]
name = "stack_bad"
authors = ["StackDoubleFlow <ojaslandge@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }
# Arch Linux does not package static libs for llvm, so we prefer static linking instead of require it
llvm-sys-160 = { package = "llvm-sys", version = "160", features = ["prefer-static"] }
anyhow = "1.0"